--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,8 @@
 <% provide(:title,"ホーム") %>
+<div class="center jumbotron">
+    <h1>勤怠管理システム</h1>
+    <%=link_to "アカウント作成","#",class: "btn btn-lg btn-primary" %>
+</div>
 
-<h1>勤怠システム</h1>
 <p>このアプリケーションでは、登録したユーザーの勤怠管理ができます。</p>
   
