--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,26 @@
        <%=link_to "勤怠管理システム",root_path,id:"logo" %>
        <nav>
          <ul class="nav navbar-nav navbar-right">
-           <li><%=link_to "ホーム",root_path %></li>
-           <li><%=link_to "ログイン","#" %></li>
+          <li><%=link_to "ホーム",root_path %></li>
+          <% if logged_in? %>
+            <li><%=link_to "ユーザー一覧",'#' %></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                アカウント<b class="caret"></b>
+                <ul class="dropdown-menu">
+                  
+                  <li><%=link_to 'ユーザー勤怠情報表示',current_user %></li>
+                  <li><%=link_to '設定', '#' %></li>
+                  <li class="divider"></li>
+                  <li><%=link_to 'ログアウト',logout_path,method: :delete %></li>
+                </ul>
+              </a>
+            </li>
+          <% else %>  
+             <li><%=link_to 'ログイン',login_path %></li>
+          
+          
+          <% end %>
          </ul>
        </nav>
      </div>
