--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -110,3 +110,7 @@ input,textarea,select,.unditable-input{
     border-bottom: 1px solid $gray-lighter;
   }
 }
+.btn-attendances-update {
+  width: 30%;
+  margin: auto;
+}
